# proyecto-final-hpc

./: .gitignore  CMakeLists-backup.txt  CMakeLists.txt  README.md  child.js  hostfile  lambdaHandler.cpp  lambda_handler.cpp  loadBalancer.cpp  main.cpp  rest_server.cpp  vcpkg.json
lambdas/: 1.js  2.js  3.js  samplefile
utils/: globalStructures.hpp  logger.hpp  misc.hpp  mpiUtils.hpp  restServer.hpp  tester.ts
validator/: tester.mjs  tester.ts
